<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:verticalScrollbarPosition="right">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ocean" />

        <TextView
            android:id="@+id/marine_science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/marine_science"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="220dp"
                android:text="@string/question1"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q1cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q1a1"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q1cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q1a2"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q1cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q1a3"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q1cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q1a4"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question2"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q2cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q2a1"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q2cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q2a2"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q2cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q2a3"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q2cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q2a4"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/question3"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q3cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q3a1"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q3cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q3a2"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q3cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q3a3"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/q3cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/q3a4"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question3"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q4cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q4a1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q4cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q4a2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q4cb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q4a3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q4cb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q4a4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/question5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question5"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q5cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q5a1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q5cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q5a2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q5cb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q5a3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q5cb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q5a4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/question6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/question6"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q6cb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q6a1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q6cb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q6a2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q6cb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q6a3"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/q6cb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="16dp"
            android:buttonTint="@color/colorAccent"
            android:text="@string/q6a4"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RadioGroup>

</RelativeLayout>

</ScrollView>





